body overflow fixed

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+body{
+  overflow: hidden;
+}
+
 .App {
   text-align: center;
 }
